--- a/base/templates/partials/_layout.html
+++ b/base/templates/partials/_layout.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Crescent University</title>
+	<title>Personality Prediction</title>
 	<link rel="shortcut icon" type="image/jpg" href="{% static 'images/images.jpeg' %}"/>
 	{% include 'partials/_stylesheets.html' %}
 </head>
