login and more changes

--- a/base/templates/partials/_navbar.html
+++ b/base/templates/partials/_navbar.html
@@ -7,17 +7,11 @@
       <div class="navbar-collapse justify-content-md-center collapse" id="navbarsExample08" style="">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'base:home' %}">Home</a>
           </li>
-          {% if request.user.is_authenticated%}
-          {% if request.user.is_staff %}
+          {% if request.user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'admin:index' %}">Dashboard</a>
-          </li>
-          {% endif %}
-          {% else %}
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'admin:index' %}">Login</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'base:logout' %}">Logout</a>
           </li>
           {% endif %}
         </ul>
