--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -73,7 +73,7 @@
 {% else %}
 <div class="text-center">
 	<h3>Administrator Login</h3>
-	<a href="{% url 'admin:index' %}" class="btn btn-primary">Login Here</a>
+	<a href="{% url 'base:login' %}" class="btn btn-primary">Login Here</a>
 </div>
 {% endif %}
 {% endblock content %}
