format personality description

--- a/personality/templates/personality.html
+++ b/personality/templates/personality.html
@@ -20,7 +20,7 @@
   </div>
 </div>
 <div class="card m-5 desc p-2" style="text-align: justify;">
-  <p>{{personality.description}}</p>
+  <p>{{personality.description | linebreaks}}</p>
 </div>
 
 
